--- a/Refactor Attempt 2/src/styles.main.dev.css
+++ b/Refactor Attempt 2/src/styles.main.dev.css
@@ -1,10 +1,10 @@
 /* Error: There is no module with the namespace "deps-variable".
  *    ,
- * 37 |         color: deps-variable.$color--sparkling-apple;
- *    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+ * 24 |     background-color: deps-variable.$color--wild-sand;
+ *    |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  *    '
- *   src/components/_styles/global/_anchor.scss 37:10    @forward
- *   src/components/_styles/global/_styles.dev.scss 1:1  @forward
+ *   src/components/_styles/global/_media.scss 24:20     @forward
+ *   src/components/_styles/global/_styles.dev.scss 2:1  @forward
  *   src/components/_styles/_styles.dev.scss 7:1         @forward
  *   src/_styles/_styles.dev.scss 4:1                    @use
  *   src/styles.main.dev.scss 1:1                        root stylesheet */
@@ -17,5 +17,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: 'Error: There is no module with the namespace "deps-variable".\a    \2577 \a 37 \2502          color: deps-variable.$color--sparkling-apple;\a    \2502                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\a    \2575 \a   src/components/_styles/global/_anchor.scss 37:10    @forward\a   src/components/_styles/global/_styles.dev.scss 1:1  @forward\a   src/components/_styles/_styles.dev.scss 7:1         @forward\a   src/_styles/_styles.dev.scss 4:1                    @use\a   src/styles.main.dev.scss 1:1                        root stylesheet';
+  content: 'Error: There is no module with the namespace "deps-variable".\a    \2577 \a 24 \2502      background-color: deps-variable.$color--wild-sand;\a    \2502                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\a    \2575 \a   src/components/_styles/global/_media.scss 24:20     @forward\a   src/components/_styles/global/_styles.dev.scss 2:1  @forward\a   src/components/_styles/_styles.dev.scss 7:1         @forward\a   src/_styles/_styles.dev.scss 4:1                    @use\a   src/styles.main.dev.scss 1:1                        root stylesheet';
 }
